--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 code {
@@ -15,4 +16,23 @@ code {
 
 * {
   box-sizing: border-box;
+}
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+}
+
+/* Remove any default browser styling that might create white borders */
+* {
+  border: none;
+}
+
+/* Ensure all containers have black background */
+div, section, main, header {
+  background-color: inherit;
 }
